[package]
name = "async-fcgi"
version = "0.1.0"
authors = ["User65k <15049544+User65k@users.noreply.github.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "FastCGI library"

repository = "https://github.com/User65k/async-fcgi"
readme = "README.md"
keywords = ["fastcgi", "fcgi", "web", "server", "protocol", "cgi", "tokio"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
bytes = "0.5"
http = "0.2"
log = "0.4"

httparse = { version = "1.3.4", optional = true }
tokio = { version = "0.2.21", optional = true }
tokio-util = { version = "0.3.1", optional = true }
http-body = { version = "0.3.1", optional = true }
slab = { version = "0.4.2", optional = true }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core","macros"] }
pretty_env_logger = { version = "0.4.0", default-features = false }
hyper = "0.13"      # Web Server Example

[features]
# only FCGI types by default
default = []

web_server = ["slab","http-body","httparse","tokio/tcp","tokio/uds","tokio/io-util","tokio/sync"]
con_pool = ["web_server"]
application = ["tokio-util/codec"]

[[example]]
name = "webserver"
path = "examples/webserver.rs"
required-features = ["con_pool","tokio/rt-core"]