[package]
name = "async-fcgi"
version = "0.3.1"
authors = ["User65k <15049544+User65k@users.noreply.github.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "FastCGI library"

repository = "https://github.com/User65k/async-fcgi"
readme = "README.md"
keywords = ["fastcgi", "fcgi", "protocol", "cgi", "tokio"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
bytes = "1.0.0"
http = "0.2"
log = "0.4"

httparse = { version = "1.3.4", optional = true }
tokio = { version = "1.0.1", optional = true }
tokio-util = { version ="0.6.0", optional = true }
http-body = { version = "0.4.0", optional = true }
slab = { version = "0.4.2", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt","macros"] }
pretty_env_logger = { version = "0.4.0", default-features = false }
hyper = {version = "0.14", features = ["http1", "server", "stream", "runtime"]}      # Web Server Example

[features]
# only FCGI types by default
default = []

web_server = ["slab","http-body","httparse","tokio/net","tokio/io-util","tokio/sync", "codec"]
con_pool = ["web_server"]
app_start = ["con_pool", "tokio/process"]
#application = ["httparse","tokio/net"]
codec = ["tokio/io-util"]

[[example]]
name = "webserver"
path = "examples/webserver.rs"
required-features = ["con_pool","tokio/rt"]

[[example]]
name = "start_fcgi_server_from_client"
path = "examples/start_fcgi_server_from_client.rs"
required-features = ["app_start","tokio/rt"]
